--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -51,11 +51,13 @@ header {
  }
 
  .logo h2 {
-    font-size:24px;     /* Define o tamanho da fonte como 24 pixels*/
-    font-weight: bold;   /* Define a fonte como negrito*/
-    color: #ffffff;      /* Define a cor do texto como branco*/
- }
-
+    font-size: 24px;
+    font-weight: bold;
+    color: #ffffff;
+    margin: 0; /* Remove margens padrão */
+    display: flex; /* Ativa flexbox para alinhamento */
+    align-items: center; /* Centraliza verticalmente */
+}
  
  /* Define estilos para o menu de navegação */
  .nav-menu {
