--- a/css/login.css
+++ b/css/login.css
@@ -49,10 +49,12 @@ header {
     margin-right: 10px; /* Adiciona margem à direita de 10px */
 }
 .logo h2 {
-    font-size:24px;     /* Define o tamanho da fonte como 24 pixels*/
-    font-weight: bold;   /* Define a fonte como negrito*/
-    color: #ffffff      /* Define a cor do texto como branco*/
-    
+    font-size: 24px;
+    font-weight: bold;
+    color: #ffffff;
+    margin: 0; /* Remove margens padrão */
+    display: flex; /* Ativa flexbox para alinhamento */
+    align-items: center; /* Centraliza verticalmente */
 }
 
 
