--- a/css/login.css
+++ b/css/login.css
@@ -12,7 +12,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    background-image: url("/img/login/fundlog.jpg"); /* imagem de fundo */
+    background-image: url("../img/login/fundlog.jpg"); /* imagem de fundo */
     background-repeat: no-repeat; /* para evitar repetição */
     background-size: cover; /* para cobrir todo o corpo */
     background-position: center ; /* para centralizar a imagem */
